tdf#113026: disable mpBoxLegend when legend not visible

Change-Id: Idc297808e1d95aecfd42e91a2aa7b99523ac7fb8